@@ -91,6 +91,42 @@ namespace tut
 			ensure_equals( zcheck, z );
 		}
     }	
+
+    // Test swapped setX calls (see bug #133)
+    template<>
+    template<>
+    void object::test<2>()
+    {
+		GEOSCoordSequence* cs = GEOSCoordSeq_create(1, 3);
+		
+		unsigned int size;
+		unsigned int dims;
+
+		ensure ( GEOSCoordSeq_getSize(cs, &size) );
+		ensure_equals( size, 1u );
+
+		ensure ( GEOSCoordSeq_getDimensions(cs, &dims) );
+		ensure_equals( dims, 3u );
+
+		double x = 10;
+		double y = 11;
+		double z = 12;
+
+		// call setY before setX, this seems
+		// to break something in GEOS-3.0.0-rc2
+		GEOSCoordSeq_setY(cs, 0, y);
+		GEOSCoordSeq_setX(cs, 0, x);
+		GEOSCoordSeq_setZ(cs, 0, z);
+
+		double xcheck, ycheck, zcheck;
+		ensure( GEOSCoordSeq_getY(cs, 0, &ycheck) );
+		ensure( GEOSCoordSeq_getX(cs, 0, &xcheck) );
+		ensure( GEOSCoordSeq_getZ(cs, 0, &zcheck) );
+
+		ensure_equals( xcheck, x );
+		ensure_equals( ycheck, y );
+		ensure_equals( zcheck, z );
+    }	
     
 } // namespace tut
 
